fix button border, wrong margin-bottom,

--- a/css/styles.css
+++ b/css/styles.css
@@ -338,11 +338,8 @@ body {
 .portfolio-btn-list {
   display: flex;
   justify-content: center;
-  gap: 24px;
-}
-
-.portfolio-btn-item {
   margin-bottom: 72px;
+  gap: 24px;
 }
 
 .portfolio-filter-btn {
@@ -359,21 +356,19 @@ body {
   background-color: var(--pressed-state-cl);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  border: 1px solid var(--pressed-state-cl);
   cursor: pointer;
 }
 
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 
 .portfolio-item {
   flex-basis: calc((100% - 2 * 24px) / 3);
-}
-
-.portfolio-item:nth-child(n-4) {
-  margin-bottom: 24px;
 }
 
 .portfolio-link {
